Use an ar script to combine the archives

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,19 @@ src/third_party/protobuf
 src/tools/gyp
 *.o
 *.a
+*.deps
+*.dirstamp
+*.svn
+src/client/linux/linux_dumper_unittest_helper
+src/config.h
+src/processor/minidump_dump
+src/processor/minidump_stackwalk
+src/stamp-h1
+src/tools/linux/core2md/core2md
+src/tools/linux/dump_syms/dump_syms
+src/tools/linux/md2core/minidump-2-core
+src/tools/linux/symupload/minidump_upload
+src/tools/linux/symupload/sym_upload
+Makefile
+config.log
+config.status
